fix: update CORS configuration to include safe default origin patterns and refactor allowed origins handling